--- a/templates/success.html
+++ b/templates/success.html
@@ -81,6 +81,9 @@
             <input type="text" id="phone_number" name="phone_number" value="{{ phone_number }}">
             <input type="submit" value="Submit">
         </form>
+        <div>
+            <p>{{ ai_response }}</p>
+        </div>
     </div>
 </body>
 </html>
