--- a/templates/success.html
+++ b/templates/success.html
@@ -82,7 +82,7 @@
             <input type="submit" value="Submit changes">
         </form>
         <div>
-            <p>{{ ai_response }}</p>
+            <p>[Internal Use] AI Response: {{ ai_response }}</p>
         </div>
     </div>
 </body>
